# dagx

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_UPDATE_SUMMARY.md  README.md  SECURITY.md  tarpaulin.toml
.context/: agent-context.json
.github/workflows/: ci.yml
benches/: dagx_bench.rs
benches/basic/: creation.rs  execution.rs  mod.rs  scaling.rs
benches/comparisons/: deep_chain.rs  diamond_pattern.rs  etl_pipeline.rs  large_scale.rs  linear_pipeline.rs  mod.rs  wide_fanout.rs
benches/patterns/: breakdown.rs  diamond.rs  fanout.rs  mod.rs
benches/realistic/: config_broadcast.rs  etl.rs  memory_efficiency.rs  mixed.rs  mod.rs
dagx-macros/: Cargo.toml  README.md
dagx-macros/src/: lib.rs
dagx-test/: Cargo.toml
dagx-test/src/: extract.rs  lib.rs
docs/: COMPARISONS.md  CYCLE_PREVENTION.md  DESIGN_PHILOSOPHY.md  TRACING.md
examples/: 01_basic.rs  02_fan_out.rs  03_fan_in.rs  04_parallel_computation.rs  circuit_breaker.rs  complex_dag.rs  conditional_workflow.rs  custom_types.rs  data_pipeline.rs  debug_tracing.rs  error_handling.rs  large_dag.rs  parallelism_proof.rs  retry_strategies.rs  timeout.rs  tracing_example.rs
scripts/: release_check.sh  run_examples.sh  test_ci.sh
src/: builder.rs  cycle_prevention.rs  deps.rs  error.rs  extract.rs  lib.rs  node.rs  output.rs  runner.rs  task.rs  types.rs
src/builder/: coverage_tests.rs  tests.rs
src/error/: tests.rs
src/extract/: coverage_tests.rs  tests.rs
src/node/: tests.rs
src/runner/: coverage_tests.rs  tests.rs
src/task/: tests.rs
src/types/: coverage_tests.rs  tests.rs
tests/: README.md  arc_tests.rs  custom_type_test.rs  cycle_prevention.rs  lib_tests.rs
tests/boundaries/: deep_chains.rs  large_scale.rs  mod.rs  type_limits.rs  zero_tasks.rs
tests/common/: mod.rs
tests/dependencies/: mod.rs  resolution.rs  single.rs  tuples.rs
tests/errors/: error_types.rs  mod.rs  propagation.rs  recovery.rs
tests/execution/: basic.rs  examples.rs  integration.rs  mod.rs  results.rs
tests/interleaving/: mod.rs
tests/parallelism/: concurrent.rs  execution.rs  mod.rs  proof.rs  spawning.rs  threads.rs  timing.rs
tests/patterns/: butterfly.rs  complex.rs  grid.rs  mod.rs  tree.rs
tests/performance/: memory.rs  mod.rs  stress.rs
tests/runtimes/: async_std.rs  compatibility.rs  mod.rs  quirky.rs  smol.rs
tests/task_patterns/: combined.rs  mod.rs  readonly.rs  stateless.rs
tests/timing/: concurrent_access.rs  interleaving.rs  mod.rs
tests/tracing/: mod.rs  with_tracing.rs  without_tracing.rs
tests/type_safety/: complex.rs  handles.rs  mod.rs
