[package]
name = "dagx-test"
version = "0.3.1"
edition = "2021"
rust-version = "1.81"
authors = ["TechnoPorg"]
license = "MIT"
description = "Utilities for dagx's internal tests"
repository = "https://github.com/swaits/dagx"
homepage = "https://github.com/swaits/dagx"
documentation = "https://docs.rs/dagx-test"

[lints]
workspace = true

[dependencies]
dagx = { version = "0.3.1", path = "../" }
